// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabMenu> should add classes for props 1`] = `
<div
  className="TabMenu TabMenu--gutters"
>
  <TabItem
    isActive={true}
    label="Some tab"
  />
  <TabItem
    isActive={false}
    label="Another tab"
  />
</div>
`;

exports[`<TabMenu> should render tab menu wrapper correctly 1`] = `
<div
  className="TabMenu"
>
  <TabItem
    isActive={true}
    label="Some tab"
  />
  <TabItem
    isActive={false}
    label="Another tab"
  />
</div>
`;
